--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Flask==3.0.2
-openai==1.16.2
-python-dotenv
-pymongo
-requests
-pdf2image
-pandas
-plotly
+plotly==5.9.0
+Flask==2.2.2
+Flask-Cors==4.0.0
+Flask-Uploads==0.2.1
+openai==1.17.1
+python-dotenv==1.0.0
+pymongo==4.6.3
+pdf2image==1.17.0
+requests==2.31.0
+pandas==2.0.3
